fix overflow css

--- a/src/sections/switch.css
+++ b/src/sections/switch.css
@@ -32,7 +32,7 @@
     border: var(--borders-2);
     height: 40px;
     padding: 3px;
-    background: var(--primary-bg-color)/*#3636364f*/;
+    background: var(--settings-1)/*#3636364f*/;
 }
 
 .switch-btn-current img:hover {
