--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,8 +6,9 @@
 
 .home {
     position: relative;
-    height: calc(100vh - 102px);
+    min-height: calc(100vh - 102px);
     padding-bottom: 50px;
+    overflow-y: auto;
     transition: 0.1s ease;
 }
 
